--- a/src/fonts/stylesheet.css
+++ b/src/fonts/stylesheet.css
@@ -37,4 +37,30 @@
 
 :root {
     --sl-font: 'real_text', serif;
+    --sl-color-accent-low: #3a1818;
+    --sl-color-accent: #b5343e;
+    --sl-color-accent-high: #eabbb9;
+    --sl-color-white: #ffffff;
+    --sl-color-gray-1: #eceef2;
+    --sl-color-gray-2: #c0c2c7;
+    --sl-color-gray-3: #888b96;
+    --sl-color-gray-4: #545861;
+    --sl-color-gray-5: #353841;
+    --sl-color-gray-6: #24272f;
+    --sl-color-black: #17181c;
+}
+/* Light mode colors. */
+:root[data-theme='light'] {
+    --sl-color-accent-low: #f1cdcb;
+    --sl-color-accent: #b73740;
+    --sl-color-accent-high: #551d1f;
+    --sl-color-white: #17181c;
+    --sl-color-gray-1: #24272f;
+    --sl-color-gray-2: #353841;
+    --sl-color-gray-3: #545861;
+    --sl-color-gray-4: #888b96;
+    --sl-color-gray-5: #c0c2c7;
+    --sl-color-gray-6: #eceef2;
+    --sl-color-gray-7: #f5f6f8;
+    --sl-color-black: #ffffff;
 }
